--- a/playPadel/templates/playPadel/base.html
+++ b/playPadel/templates/playPadel/base.html
@@ -28,7 +28,18 @@
                 </div>
                 <div>
                     {% if user.is_authenticated %}
-                        <p class="pt-3 mr-2">Accesso effettuato come <strong>{{ user.username }}</strong> <a href="{% url 'logout' %}" class="ml-2">Esci</a></p>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="bi bi-list"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu">
+                                <h6 class="dropdown-header">Accesso effettuato come <strong>{{ user.username }}</strong></h6>
+                                <a href="{% url 'logout' %}" class="dropdown-item">Profilo & Storico</a>
+                                <a href="{% url 'logout' %}" class="dropdown-item">Modifica dati</a>
+                                <div class="dropdown-divider"></div>
+                                <a href="{% url 'logout' %}" class="dropdown-item">Esci</a>
+                            </div>
+                        </div>
                     {% else %}
                         <a href="{% url 'login' %}" class="btn btn-outline-light mr-2" role="button">Accedi</a>
                         <a href="{% url 'registrati' %}" class="btn btn-primary" role="button">Iscriviti</a>
