--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -1,10 +1,7 @@
 {% extends "playPadel/base.html" %}
 
 {% load static %}
-
-{% block head %}
-<link rel="stylesheet" href="{% static '/css/impianto_detail_style.css' %}">
-{% endblock %}
+{% load crispy_forms_tags %}
 
 {% block title %} PlayPadel - {{ object.nome }} {% endblock %}
 
@@ -64,48 +61,135 @@
                     <img src="{% static 'img/media' %}/{{ object.foto }}" class="img-fluid rounded" alt="Foto dell'impianto">
                 </div>
             </div>
-            <div class="row mt-4">
-                <div class="col text-center">
-                    <h2 id="lista_campi">Lista campi</h2>
+            {% if news %}
+                <hr class="hr" />
+                <div class="d-flex align-items-center mt-4 mb-2">
+                    <i class="bi bi-newspaper mr-2" style="font-size: 1.5rem"></i>
+                    <h2 class="mb-0">News dell'impianto</h2>
                 </div>
-            </div>
-            <div id="accordion">
-                {% for i in campo %}
-                    <div class="card bg-transparent my-2" style="border: 1px solid #ddd;">
-                        <a class="card-header bg-transparent" style="cursor: pointer" data-toggle="collapse" data-target="#collapse{{ forloop.counter }}" aria-expanded="false">
-                            <span class="title" style="font-size: 17px; color: #000">Campo {{ forloop.counter }} - {{ i.tipologia }}</span>
-                            <span class="accicon float-right" style="font-size: 20px; width: 1.2em;"><i class="bi bi-chevron-up"></i></span>
-                        </a>
-                        <div id="collapse{{ forloop.counter }}" class="collapse hidden" data-parent="#accordion">
-                            <div class="card-body" style="border-top: 1px solid #ddd;">
-                                <div class="btn-group-toggle" data-toggle="buttons">
-                                    {% for ora in ore %}
-                                        <label class="btn btn-outline-primary inactive my-1" style="min-width: 70px;">
-                                            <input type="checkbox" checked autocomplete="off"> {{ ora }}
-                                        </label>
-                                    {% endfor %}
+                <div id="textCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        {% for n in news %}
+                            {% if forloop.first %}
+                                <div class="carousel-item active" style="min-height: 110px">
+                                    <div class="d-flex flex-column justify-content-center align-items-center mt-2 w-75 mx-auto">
+                                        <h5 class="text-center">{{ n.titolo }}</h5>
+                                        <p class="text-center mb-0">{{ n.descrizione }}</p>
+                                    </div>
+                                </div>
+                            {% else %}
+                                <div class="carousel-item" style="min-height: 110px">
+                                    <div class="d-flex flex-column justify-content-center align-items-center mt-2 w-75 mx-auto">
+                                        <h5 class="text-center">{{ n.titolo }}</h5>
+                                        <p class="text-center mb-0">{{ n.descrizione }}</p>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    <a class="carousel-control-prev" href="#textCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#textCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            {% endif %}
+            <hr class="hr" />
+            <form method="post">
+                {% csrf_token %}
+                <div class="row my-4">
+                    <div class="col-md-5 d-flex align-items-center">
+                        <i class="bi bi-list-ol mr-2" style="font-size: 1.5rem"></i>
+                        <h2>Lista campi</h2>
+                    </div>
+                    <div class="col-md-4 text-right form-group mb-0">
+                        {{ form.data_prenotazione }}
+                    </div>
+                    <div class="col-md-3 mb-0">
+                        <div class="form-inline float-right">
+                            <label for="selectDuration" class="mr-2"><strong>Durata</strong></label>
+                            <select class="custom-select form-control" id="selectDuration" style="min-width: 150px; min-height: 48px">
+                                <option value="" selected>Seleziona...</option>
+                                <option value="60">60 min.</option>
+                                <option value="90">90 min.</option>
+                                <option value="120">120 min.</option>
+                            </select>
+                            <div class="invalid-feedback">Example invalid custom select feedback</div>
+                        </div>
+                    </div>
+                </div>
+                <div id="accordion">
+                    {% for i in campo %}
+                        <div class="card bg-transparent my-2" style="border: 1px solid #ddd;">
+                            <a class="card-header bg-transparent" style="cursor: pointer" data-toggle="collapse" data-target="#collapse{{ forloop.counter }}" aria-expanded="false">
+                                <span class="title" style="font-size: 17px; color: #000">Campo {{ forloop.counter }} - {{ i.tipologia }}</span>
+                                <span class="accicon float-right" style="font-size: 20px; width: 1.2em;"><i class="bi bi-caret-down-fill"></i></span>
+                            </a>
+                            <div id="collapse{{ forloop.counter }}" class="collapse hidden" data-parent="#accordion">
+                                <div class="card-body" style="border-top: 1px solid #ddd;">
+                                    <div class="btn-group-toggle" data-toggle="buttons">
+                                        {% for ora in ore %}
+                                            <label class="btn btn-outline-primary inactive my-1" style="min-width: 70px;" id="{{ ora }}">
+                                                <input type="radio" checked autocomplete="off"> {{ ora }}
+                                            </label>
+                                        {% endfor %}
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                    {% endfor %}
+                </div>
+                <div class="row align-items-center my-4">
+                    <div class="col-md-4 text-left">
+                        <a href="" class="btn btn-outline-danger" onclick="$().button('toggle')">
+                            <i class="bi bi-x"></i> Annulla selezione
+                        </a>
                     </div>
-                {% endfor %}
-            </div>
-            <div class="row align-items-center my-4">
-                <div class="col-md-4 text-left">
-                    <a href="" class="btn btn-outline-danger" onclick="$().button('toggle')">
-                        <i class="bi bi-x"></i> Annulla selezione
-                    </a>
+                    <div class="col-md-6 text-right mb-0">
+                        <h5 class="align-bottom mb-0">Totale: <span id="totalCost">0.00</span>€</h5>
+                    </div>
+                    <div class="col-md-2 text-right">
+                        <button type="submit" class="btn btn-outline-success">
+                            <strong>Prenota </strong><i class="bi bi-calendar2-check"></i>
+                        </button>
+                    </div>
                 </div>
-                <div class="col-md-4 text-right">
-                    <h5>Totale: </h5>
-                </div>
-                <div class="col-md-4 text-right">
-                    <a href="{% url 'website:conferma_prenotazione' %}" class="btn btn-outline-success">
-                        <strong>Prenota </strong><i class="bi bi-calendar2-check"></i>
-                    </a>
-                </div>
-            </div>
+            </form>
         </div>
     </section>
 
+
+    <!-- Modifica delle frecce del carousel in scuro -->
+    <style>
+        .carousel-control-next,
+        .carousel-control-prev,
+        .carousel-indicators {
+            filter: invert(100%);
+        }
+    </style>
+
+    <!-- Script per modificare il prezzo totale in base alla scelta della durata -->
+    <script>
+        document.getElementById('selectDuration').addEventListener('change', function() {
+            var duration = this.value; // Get the selected service duration in minutes
+
+            if (duration) { // Check if a valid option is selected
+                var costPerHour = {{ object.prezzi }}; // Let's assume the service costs $50 per hour
+
+                // Convert duration to hours and calculate total cost
+                var totalCost = (duration / 60) * costPerHour;
+
+                // Update the total cost in the HTML
+                document.getElementById('totalCost').innerText = totalCost.toFixed(2);
+            } else {
+                // Reset the total cost if no valid option is selected
+                document.getElementById('totalCost').innerText = '0.00';
+            }
+        });
+    </script>
+
 {% endblock %}
+
