--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -1,4 +1,5 @@
 {% extends "playPadel/base.html" %}
+{% load crispy_forms_filters %}
 
 {% load static %}
 {% load crispy_forms_tags %}
@@ -105,7 +106,8 @@
                         <i class="bi bi-list-ol mr-2" style="font-size: 1.5rem"></i>
                         <h2>Lista campi</h2>
                     </div>
-                    <div class="col-md-4 text-right form-group mb-0">
+                    <div class="col-md-4 text-right form-inline mb-0">
+                        <label for="selectDate" class="mr-2"><strong>Data prenotazione</strong></label>
                         {{ form.data_prenotazione }}
                     </div>
                     <div class="col-md-3 mb-0">
