Fixed general things, done login, initialized dashboard, ...

--- a/playPadel/website/templates/cliente/dashboard_cliente.html
+++ b/playPadel/website/templates/cliente/dashboard_cliente.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>PlayPadel - Dashboard</title>
 </head>
 <body>
-    LOGIN
+    Dashboard cliente
 </body>
 </html>
