--- a/playPadel/website/templates/website/homepage.html
+++ b/playPadel/website/templates/website/homepage.html
@@ -10,7 +10,7 @@
         <div class="container">
             <h1 class="display-4 text-white"><strong>Benvenuti su PlayPadel</strong></h1>
             <p class="lead"><mark>Prenota facilmente il tuo campo da padel nei migliori impianti della tua città</mark></p>
-            <a href="{% url 'website:impianti' %}" class="btn btn-light btn-lg">Visualizza impianti</a>
+            <a href="{% url 'website:website:impianti' %}" class="btn btn-light btn-lg">Visualizza impianti</a>
         </div>
     </section>
 
