--- a/playPadel/website/templates/website/prenota.html
+++ b/playPadel/website/templates/website/prenota.html
@@ -4,6 +4,11 @@
 
 {% block content %}
 
-    Prenota
+    <section class="section py-4" style="min-height: 83vh;">
+        <div class="container bg-white text-black text text-center py-5">
+            <h2>Prenota - Cerca disponibilità</h2>
+
+        </div>
+    </section>
 
 {% endblock %}
