--- a/playPadel/templates/playPadel/base.html
+++ b/playPadel/templates/playPadel/base.html
@@ -8,6 +8,7 @@
         <link rel="icon" href="{% static '/img/favicon.ico' %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
         {% block head %} {% endblock %}
     </head>
     <body class="position-relative">
@@ -21,7 +22,7 @@
                     <nav>
                         <ul class="list-unstyled d-flex mb-0">
                             <li class="me-4"><a href="{% url 'website:homepage' %}" class="text-light text-decoration-none">Home</a></li>
-                            <li><a href="{% url 'website:impianti' %}" class="text-light m-4 text-decoration-none">Impianti</a></li>
+                            <li><a href="{% url 'website:website:impianti' %}" class="text-light m-4 text-decoration-none">Impianti</a></li>
                             <li><a href="{% url 'website:prenota' %}" class="text-light text-decoration-none">Prenota</a></li>
                         </ul>
                     </nav>
@@ -34,8 +35,12 @@
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu">
                                 <h6 class="dropdown-header">Accesso effettuato come <strong>{{ user.username }}</strong></h6>
-                                <a href="{% url 'logout' %}" class="dropdown-item">Profilo & Storico</a>
-                                <a href="{% url 'logout' %}" class="dropdown-item">Modifica dati</a>
+                                {% if user.is_cliente %}
+                                    <a href="{% url 'website:cliente:dashboard_cliente' %}" class="dropdown-item">Profilo & Storico</a>
+                                {% elif user.is_staff %}
+                                    <a href="{% url 'website:gestore:dashboard_gestore' %}" class="dropdown-item">Profilo & Storico</a>
+                                {% endif %}
+                                <a href="{% url 'website:homepage' %}" class="dropdown-item">Modifica dati</a>
                                 <div class="dropdown-divider"></div>
                                 <a href="{% url 'logout' %}" class="dropdown-item">Esci</a>
                             </div>
@@ -65,8 +70,29 @@
                 <p class="text-light mb-0">© 2024 PlayPadel. Tutti i diritti riservati.</p>
             </div>
         </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <strong>Errore! </strong> {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                {% else %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        <strong>Successo! </strong> {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
