--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -1,8 +1,8 @@
 {% extends "playPadel/base.html" %}
-{% load crispy_forms_filters %}
 
 {% load static %}
 {% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 
 {% block title %} PlayPadel - {{ object.nome }} {% endblock %}
 
@@ -12,7 +12,7 @@
         <div class="container mt-5">
             <div class="row align-items-center">
                 <div class="col-md-2 text-left">
-                    <a href="{% url 'website:impianti' %}" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="Torna alla lista degli impianti">
+                    <a href="{% url 'website:website:impianti' %}" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="Torna alla lista degli impianti">
                         <i class="bi bi-arrow-left"></i>
                     </a>
                 </div>
@@ -99,7 +99,7 @@
                 </div>
             {% endif %}
             <hr class="hr" />
-            <form method="post">
+            <form method="post" action="{% url 'website:website:conferma_prenotazione' slug=object.slug %}">
                 {% csrf_token %}
                 <div class="row my-4">
                     <div class="col-md-5 d-flex align-items-center">
@@ -108,12 +108,12 @@
                     </div>
                     <div class="col-md-4 text-right form-inline mb-0">
                         <label for="selectDate" class="mr-2"><strong>Data prenotazione</strong></label>
-                        {{ form.data_prenotazione }}
+                        {{ form|crispy }}
                     </div>
                     <div class="col-md-3 mb-0">
                         <div class="form-inline float-right">
                             <label for="selectDuration" class="mr-2"><strong>Durata</strong></label>
-                            <select class="custom-select form-control" id="selectDuration" style="min-width: 150px; min-height: 48px">
+                            <select class="custom-select form-control" id="selectDuration" style="min-width: 150px; min-height: 48px" required>
                                 <option value="" selected>Seleziona...</option>
                                 <option value="60">60 min.</option>
                                 <option value="90">90 min.</option>
@@ -136,6 +136,7 @@
                                         {% for ora in ore %}
                                             <label class="btn btn-outline-primary inactive my-1" style="min-width: 70px;" id="{{ ora }}">
                                                 <input type="radio" checked autocomplete="off"> {{ ora }}
+                                                <!-- SE ESISTE PRENOTAZIONE DI MEZZ'ORA CONTROLLARE CON IF E FARE APPEND BOTTONE CAMBIO ORA-->
                                             </label>
                                         {% endfor %}
                                     </div>
@@ -146,9 +147,7 @@
                 </div>
                 <div class="row align-items-center my-4">
                     <div class="col-md-4 text-left">
-                        <a href="" class="btn btn-outline-danger" onclick="$().button('toggle')">
-                            <i class="bi bi-x"></i> Annulla selezione
-                        </a>
+                        <input type="reset" class="btn btn-outline-danger" value="Annulla selezione"/>
                     </div>
                     <div class="col-md-6 text-right mb-0">
                         <h5 class="align-bottom mb-0">Totale: <span id="totalCost">0.00</span>€</h5>
