--- a/playPadel/website/templates/website/search_template.html
+++ b/playPadel/website/templates/website/search_template.html
@@ -1,4 +1,4 @@
-<form action="{% url 'website:cerca_impianto' %}" method="get" class="form-group my-2 needs-validation">
+<form action="{% url 'website:website:cerca_impianto' %}" method="get" class="form-group my-2 needs-validation">
     <div class="row mt-4">
         <div class="col-md-6 form-inline">
             <label for="cercaNomeImpianto" class="ml-4"><strong>Cerca impianto per nome</strong></label>
