--- a/playPadel/website/templates/website/prenota.html
+++ b/playPadel/website/templates/website/prenota.html
@@ -1,5 +1,9 @@
 {% extends "playPadel/base.html" %}
 
+{% load static %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
+
 {% block title %} PlayPadel - Prenota {% endblock %}
 
 {% block content %}
@@ -7,7 +11,30 @@
     <section class="section py-4" style="min-height: 83vh;">
         <div class="container bg-white text-black text text-center py-5">
             <h2>Prenota - Cerca disponibilità</h2>
-
+            <form action="{% url 'website:prenota' %}" method="get" class="form-group my-2 needs-validation">
+                {% csrf_token %}
+                <div class="row my-3">
+                    <div class="col-md-5 d-flex align-items-center">
+                        <h5>Seleziona:</h5>
+                    </div>
+                    <div class="col-md-6 text-right form-inline mb-0">
+                        <label for="selectDate" class="mr-2"><strong>Data prenotazione</strong></label>
+                        {{ form|crispy }}
+                    </div>
+                    <div class="col-md-3 mb-0">
+                        <div class="form-inline float-right">
+                            <label for="selectDuration" class="mr-2"><strong>Durata</strong></label>
+                            <select class="custom-select form-control" id="selectDuration" style="min-width: 150px; min-height: 48px" required>
+                                <option value="" selected>Seleziona...</option>
+                                <option value="60">60 min.</option>
+                                <option value="90">90 min.</option>
+                                <option value="120">120 min.</option>
+                            </select>
+                            <div class="invalid-feedback">Example invalid custom select feedback</div>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </section>
 
