Re-styled dashboard buttons and added last prenotation info

--- a/playPadel/website/templates/website/conferma_prenotazione.html
+++ b/playPadel/website/templates/website/conferma_prenotazione.html
@@ -10,7 +10,7 @@
             <p>Preparati a giocare presso <strong>{{ impianto.nome }}</strong></p>
             <div class="tipo-buttons">
                 <a href="{% url 'website:website:impianti' %}" class="btn btn-outline-dark ml-2" role="button">Torna alla lista impianti</a>
-                <a href="{% url 'website:website:dashboard_cliente' %}" class="btn btn-outline-dark mr-2" role="button">Visualizza prenotazioni</a>
+                <a href="{% url 'website:cliente:prenotazioni_cliente' %}" class="btn btn-outline-dark mr-2" role="button">Visualizza prenotazioni</a>
             </div>
         </div>
     </section>
