--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -59,7 +59,7 @@
                     </ul>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="{% static 'img/media' %}/{{ object.foto }}" class="img-fluid rounded" alt="Foto dell'impianto">
+                    <img src="{% static 'img/media' %}/{{ object.foto }}" class="img-fluid rounded" alt="Foto dell'impianto" style="max-height: 450px">
                 </div>
             </div>
             {% if news %}
