--- a/playPadel/website/templates/cliente/dashboard_cliente.html
+++ b/playPadel/website/templates/cliente/dashboard_cliente.html
@@ -9,12 +9,19 @@
     <section class="section py-4" style="min-height: 83vh;">
         <div class="container bg-white text-black text text-center py-5">
             <h2>Dashboard cliente <strong>{{ user.username }}</strong></h2>
-            <div class="row">
-                <i class="bi bi-person-lines-fill mr-3" style="font-size: 1.3rem"></i>
-                <h4>Dati utente</h4>
-            </div>
-            <div class="row">
+            <div class="row mt-4">
                 <div class="col-md-6 border-right border-dark">
+                    <div class="row">
+                        <div class="col-md-6 text-center">
+                            <div class="row">
+                                <i class="bi bi-person-lines-fill mr-3" style="font-size: 1.3rem"></i>
+                                <h4>Dati utente</h4>
+                            </div>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <a href="" class="btn btn-outline-dark btn-sm" role="button">Modifica informazioni</a>
+                        </div>
+                    </div>
                     <div class="row mt-2">
                         <div class="col-md-6 text-left">
                             <strong>Nome: </strong> {{ user.first_name }}
@@ -42,20 +49,53 @@
                         </div>
                     </div>
                     <div class="row mt-4">
-                        <div class="col-md-12 text-center">
-                            <a href="" class="card-link btn btn-outline-dark w-75" role="button">Modifica informazioni</a>
+                        <div class="col-md-8 text-left">
+                            <div class="row">
+                                <i class="bi bi-calendar-plus-fill mr-3" style="font-size: 1.3rem"></i>
+                                <h4 class="mb-0">Prenotazioni</h4>
+                            </div>
+                        </div>
+                        <div class="col-md-4 text-right">
+                            <a href="{% url 'website:cliente:prenotazioni_cliente' %}" class="btn btn-outline-success btn-sm" role="button">Vedi tutte</a>
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <strong>Ultima prenotazione: </strong>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col-md-7 text-left">
+                            <i class="bi bi-geo-alt-fill mr-1"></i>
+                            {{ prenotazioni.last.impianto.nome }} - Campo {{ prenotazioni.last.campo.id }} {{ prenotazioni.last.campo.tipologia }}
+                        </div>
+                        <div class="col-md-5 text-left">
+
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col-md-6 text-left">
+                            <i class="bi bi-calendar mr-1"></i>
+                            {{ prenotazioni.last.data }}
+                        </div>
+                        <div class="col-md-6 text-left">
+                            <i class="bi bi-clock-fill mr-1"></i>
+                            {{ prenotazioni.last.ora_inizio }} - {{ prenotazioni.last.ora_fine }}
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="col-md-12 mx-auto">
-                        <strong>Foto profilo</strong>
-                    </div>
-                    <div class="col-md-12 mt-2 mx-auto">
-                        <img src="{% static 'img/profile_pics' %}/{{ user.cliente.foto }}" class="img-fluid" style="width: 50%; height: 50%;" alt="Foto cliente">
-                    </div>
-                    <div class="col-md-12 mx-auto">
-                        <a href="" class="card-link btn btn-outline-info w-75" role="button">Cambia immagine</a>
+                    <div class="row ml-2">
+                        <div class="col-md-6 text-left">
+                            <div class="row">
+                                <i class="bi bi-person-square mr-3" style="font-size: 1.3rem"></i>
+                                <h4>Foto profilo</h4>
+                            </div>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <a href="" class="btn btn-outline-info btn-sm " role="button">Cambia immagine</a>
+                        </div>
+                        <div class="col-md-12 mt-2">
+                            <img src="{% static 'img/profile_pics' %}/{{ user.cliente.foto }}" class="img-fluid" style="max-height: 250px" alt="Foto cliente">
+                        </div>
                     </div>
                 </div>
             </div>
