--- a/playPadel/website/templates/cliente/modifica_cliente.html
+++ b/playPadel/website/templates/cliente/modifica_cliente.html
@@ -1,6 +1,6 @@
 {% extends "playPadel/base.html" %}
 
-{% block title %} PlayPadel - Prenotazioni {% endblock %}
+{% block title %} PlayPadel - Modifica dati {% endblock %}
 
 {% block content %}
 
@@ -13,7 +13,7 @@
                     </a>
                 </div>
                 <div class="col-md-8 text-center">
-                    <h2>Prenotazioni cliente <strong>{{ user.username }}</strong></h2>
+                    <h2>Modifica dati</h2>
                 </div>
                 <div class="col-md-2"></div>
             </div>
