--- a/playPadel/website/templates/cliente/dashboard_cliente.html
+++ b/playPadel/website/templates/cliente/dashboard_cliente.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-6 text-left">
-                            <strong>Cognome:</strong> {{ user.last_name }}
+                            <strong>Cognome: </strong> {{ user.last_name }}
                         </div>
                         <div class="col-md-6 text-left">
                             <strong>Id utente: </strong> {{ user.id }}
@@ -40,12 +40,12 @@
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-12 text-left">
-                            <strong>Email:</strong> {{ user.email }}
+                            <strong>Email: </strong> {{ user.email }}
                         </div>
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-12 text-left">
-                            <strong>Data creazione:</strong> {{ user.date_joined.date }}
+                            <strong>Data creazione account: </strong> {{ user.date_joined.date }}
                         </div>
                     </div>
                     <div class="row mt-4">
@@ -64,7 +64,7 @@
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-7 text-left">
-                            <i class="bi bi-geo-alt-fill mr-1"></i>
+                            <i class="bi bi-geo-alt mr-1"></i>
                             {{ prenotazioni.last.impianto.nome }} - Campo {{ prenotazioni.last.campo.id }} {{ prenotazioni.last.campo.tipologia }}
                         </div>
                         <div class="col-md-5 text-left">
@@ -74,11 +74,11 @@
                     <div class="row mt-2">
                         <div class="col-md-4 text-left">
                             <i class="bi bi-calendar mr-1"></i>
-                            {{ prenotazioni.last.data }}
+                            {{ prenotazioni.last.data|date:'d-m-Y' }}
                         </div>
                         <div class="col-md-8 text-left">
-                            <i class="bi bi-clock-fill mr-1"></i>
-                            {{ prenotazioni.last.ora_inizio }} - {{ prenotazioni.last.ora_fine }}
+                            <i class="bi bi-clock mr-1"></i>
+                            {{ prenotazioni.last.ora_inizio|date:'H:i' }} - {{ prenotazioni.last.ora_fine|date:'H:i' }}
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
             <div class="card-deck justify-content-center mt-2">
                 {% for p in dati_partita %}
                     <div class="card bg-light my-3" style="min-width: 30rem; max-width: 33rem;">
-                        <div class="card-header">{{ p.data }} | {{ p.ora }}</div>
+                        <div class="card-header">{{ p.data|date:'d-m-Y' }} | {{ p.ora|date:'H:i' }}</div>
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-3 text-center my-auto">
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="card-footer text-muted">
-                            {{ p.nome_impianto }} <br> Campo {{ p.id_campo }}
+                            {{ p.nome_impianto }} - Campo {{ p.id_campo }}
                         </div>
                     </div>
                 {% empty %}
